# wgpu-test

./: Cargo.toml  rust-toolchain  shader.wgsl
runner/: Cargo.toml  build.rs
runner/src/: main.rs
shader-rust/: Cargo.toml
shader-rust/src/: lib.rs
