[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = { version = "0.16.0", features = ["spirv"] }
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
spirv-builder = "0.7.0"

[build-dependencies]
spirv-builder = "0.7.0"